bonus section half completed

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flower Shop</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://use.fontawesome.com/eadfe59d54.js"></script>
   </head>
   <body>
     <!-- Header -->
@@ -135,6 +136,41 @@
           </div>
           <div class="instagram-item">
             <img src="./images/Rectangle 6.png" alt="flower picture" />
+          </div>
+        </div>
+      </section>
+
+      <!-- Testimonial Section -->
+      <section class="testimonial">
+        <h2 class="testimonial-title">Customer Testimonial</h2>
+        <p class="testimonial-desc primary-desc">From Happy Customer</p>
+        <div class="testimonial-items-container">
+          <div class="testimonial-item">
+            <img src="./images/p1 (2).jpg" alt="review person img" />
+            <h3>Sundeep Malviki</h3>
+            <p class="rev-desc">
+              I am happy with the service as my friend was happy. Thank You
+              floweraura Champions.
+            </p>
+            <p class="rev-desc">Posted On :10/07/2023</p>
+          </div>
+          <div class="testimonial-item">
+            <img src="./images/p1 (1).jpg" alt="review person img" />
+            <h3>Khushi Akter</h3>
+            <p class="rev-desc">
+              Placing the order was a smooth process. The products were liked
+              very much by the recipient.
+            </p>
+            <p class="rev-desc">Posted On :10/07/2023</p>
+          </div>
+          <div class="testimonial-item">
+            <img src="./images/p1 (3).jpg" alt="review person img" />
+            <h3>Jhankhar Mahbub</h3>
+            <p class="rev-desc">
+              My mom loved the flowers as they were very fresh and the cake was
+              delicious
+            </p>
+            <p class="rev-desc">Posted On :10/07/2023</p>
           </div>
         </div>
       </section>
