--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
           <div class="testimonial-item">
             <img src="./images/p1 (2).jpg" alt="review person img" />
             <h3>Sundeep Malviki</h3>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
             <p class="rev-desc">
               I am happy with the service as my friend was happy. Thank You
               floweraura Champions.
@@ -157,6 +160,10 @@
           <div class="testimonial-item">
             <img src="./images/p1 (1).jpg" alt="review person img" />
             <h3>Khushi Akter</h3>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
             <p class="rev-desc">
               Placing the order was a smooth process. The products were liked
               very much by the recipient.
@@ -166,6 +173,11 @@
           <div class="testimonial-item">
             <img src="./images/p1 (3).jpg" alt="review person img" />
             <h3>Jhankhar Mahbub</h3>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
             <p class="rev-desc">
               My mom loved the flowers as they were very fresh and the cake was
               delicious
