--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       </section>
 
       <!-- Testimonial Section -->
-      <section class="testimonial">
+      <section class="testimonial-section">
         <h2 class="testimonial-title">Customer Testimonial</h2>
         <p class="testimonial-desc primary-desc">From Happy Customer</p>
         <div class="testimonial-items-container">
